--- a/index.css
+++ b/index.css
@@ -14,15 +14,17 @@ section {
 }
 
 /* Typography */
-.header-2 {
+body {
   font-family: "Poppins";
+}
+
+.header-2 {
   font-weight: bold;
   font-size: 40px;
   line-height: 52px;
 }
 
 .body-2 {
-  font-family: "Poppins";
   font-size: 16px;
   line-height: 24px;
   font-weight: normal;
