--- a/index.css
+++ b/index.css
@@ -18,19 +18,18 @@ body,
 h1,
 h6,
 p {
-  padding: 0px;
-  margin: 0px;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 .header-2 {
-  font-family: "Poppins";
   font-weight: bold;
   font-size: 40px;
   line-height: 52px;
 }
 
 .body-2 {
-  font-family: "Poppins";
   font-size: 16px;
   line-height: 24px;
   font-weight: normal;
@@ -93,8 +92,8 @@ p {
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   width: 170px;
 }
 
