Use descriptive class names

--- a/index.css
+++ b/index.css
@@ -40,15 +40,15 @@ p {
 }
 
 /* Colors */
-.b300 {
+.color-b300 {
   color: #7f8cff;
 }
 
-.n600 {
+.color-n600 {
   color: #344563;
 }
 
-.n800 {
+.color-n800 {
   color: #172b4d;
 }
 
