--- a/index.css
+++ b/index.css
@@ -39,6 +39,10 @@ p {
   font-weight: 500;
 }
 
+.drop-shadow {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
 /* Colors */
 .color-b300 {
   color: #7f8cff;
