--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ p {
 }
 
 .drop-shadow {
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 /* Colors */
