--- a/index.css
+++ b/index.css
@@ -74,14 +74,48 @@ p {
   align-items: center;
 }
 
-.tertiary-btn {
-  width: 40px;
-  height: 40px;
+.button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 24px;
   border-radius: 8px;
+  background-color: #6070ff;
+  color: #6070ff;
+  border: 1px solid #7f8cff;
+  box-sizing: border-box;
+  height: 48px;
+  min-width: 93px;
+}
+
+.button:hover {
+  background-color: #6070ff;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  color: #fff;
+}
+
+.button:active {
+  background-color: #2230d2;
+  color: #fff;
+}
+
+.button:disabled {
+  border: 1px solid #c1c7d0;
+  box-sizing: border-box;
+}
+
+.button:enabled {
+  border: 1px solid #7f8cff;
+  box-sizing: border-box;
+}
+
+.tertiary-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  width: 40px;
+  height: 40px;
+  margin-right: 24px;
 }
 
 .headline {
