--- a/index.css
+++ b/index.css
@@ -87,6 +87,10 @@ p {
   min-width: 93px;
 }
 
+.link-button {
+  text-decoration: none;
+}
+
 .button:hover {
   background-color: #6070ff;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
