--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ section {
 /* Typography */
 body,
 h1,
+h2,
 h6,
 p {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
@@ -29,23 +30,47 @@ p {
   line-height: 52px;
 }
 
+.header-3 {
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+}
+
 .body-2 {
   font-size: 16px;
   line-height: 24px;
   font-weight: normal;
 }
 
+.body-3 {
+  font-size: 15px;
+  line-height: 24px;
+}
+
 .bolder {
   font-weight: 500;
+}
+
+.bolder-2 {
+  font-weight: 600;
 }
 
 .drop-shadow {
   filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.caption {
+  font-size: 13px;
+  line-height: 16px;
+}
+
 /* Colors */
 .color-b300 {
   color: #7f8cff;
+}
+
+.color-n100 {
+  color: #7a869a;
 }
 
 .color-n600 {
@@ -84,8 +109,9 @@ p {
   border: 1px solid #7f8cff;
   box-sizing: border-box;
   height: 48px;
-  min-width: 93px;
+  width: fit-content;
   padding: 12px;
+  text-decoration: none;
 }
 
 .link-button {
