--- a/index.css
+++ b/index.css
@@ -129,17 +129,22 @@ p {
 
 .button {
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 8px;
+  padding: 12px;
+
+  height: 48px;
+
   background-color: #fff;
   color: #6070ff;
   border: 1px solid #7f8cff;
   box-sizing: border-box;
-  height: 48px;
-  width: fit-content;
-  padding: 12px;
   text-decoration: none;
+  border-radius: 8px;
+
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
 }
 
 .link-button {
