--- a/index.css
+++ b/index.css
@@ -268,6 +268,15 @@ p {
   border-bottom: solid 1px #dfe1e6;
 }
 
+.skill-item {
+  display: flex;
+  align-items: center;
+  background-color: #f7f7f9;
+  border-radius: 8px;
+  margin: 12px 0;
+  padding: 9px 12px;
+}
+
 .list-header {
   display: flex;
   align-items: center;
@@ -289,8 +298,16 @@ p {
   margin-right: 12px;
 }
 
+.ml-12 {
+  margin-left: 12px;
+}
+
 .p-16 {
   padding: 16px;
+}
+
+.p-12 {
+  padding: 12px;
 }
 
 .ml-8 {
