--- a/index.css
+++ b/index.css
@@ -123,12 +123,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.mobile-background {
-  background-image: url("images/header-background-mobile.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #fff;
 }
 
 .logo {
@@ -199,7 +194,8 @@ p {
   flex-direction: column;
   align-items: flex-start;
   padding: 114px 24px;
-  background-image: url("images/background-image.svg");
+  background-image: url(images/background-image.svg),
+    url(images/header-background-mobile.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
