--- a/index.css
+++ b/index.css
@@ -233,6 +233,11 @@ p {
   margin: 20px 0 20px 0;
 }
 
+.action {
+  padding-top: 4px;
+  padding-bottom: 12px;
+}
+
 .card {
   background-color: #fff;
   border: 1px solid #dfe1e6;
