--- a/index.css
+++ b/index.css
@@ -318,11 +318,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding-top: 21px;
-  padding-bottom: 45px;
 }
 
 .form-background {
@@ -331,6 +327,27 @@ p {
   background-image: url(images/contact-form-shapes-mobile.svg);
   background-position: right top;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-field {
+  background-color: #fff;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 15px 38px 15px 16px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #172b4d;
+  font-family: "Poppins", Cambria, Cochin, Georgia, Times, "Times New Roman",
+    serif;
+}
+
+form {
+  margin-top: 30px;
+  display: grid;
+  grid-row-gap: 20px;
 }
 
 /* Spacing */
