--- a/index.css
+++ b/index.css
@@ -63,6 +63,13 @@ p {
   line-height: 24px;
 }
 
+.body-4 {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: normal;
+  font-style: normal;
+}
+
 .bolder {
   font-weight: 500;
 }
@@ -95,6 +102,10 @@ p {
 
 .color-b400 {
   color: #6070ff;
+}
+
+.color-n0 {
+  color: #fff;
 }
 
 .color-n100 {
@@ -307,6 +318,20 @@ footer {
   background-image: url(images/contact-form-shapes-mobile.svg);
   background-repeat: no-repeat;
   background-position: right top;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 82px 24px 45px 24px;
+}
+
+form {
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.align-center {
+  text-align: center;
 }
 
 /* Spacing */
