--- a/index.css
+++ b/index.css
@@ -207,7 +207,8 @@ p {
   flex-direction: column;
   align-items: flex-start;
   padding: 114px 24px;
-  background-image: url(images/background-image.svg),
+  background-image:
+    url(images/background-image.svg),
     url(images/header-background-mobile.svg);
   background-repeat: no-repeat;
   background-size: cover;
