--- a/index.css
+++ b/index.css
@@ -249,7 +249,8 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 170px;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .social-media-icons.li {
@@ -264,15 +265,16 @@ p {
 .tags,
 .frame-2 {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  margin: 20px 0 20px 0;
+  gap: 8px;
+  margin-bottom: 20px;
 }
 
 .tag {
   border-radius: 8px;
   background-color: #ebebff;
   padding: 4px 12px;
-  margin-right: 8px;
 }
 
 .action {
