--- a/index.css
+++ b/index.css
@@ -443,11 +443,22 @@ form {
   }
 
   .snapshot {
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 100%;
   }
 
   .card {
+    display: grid;
+    grid-template-columns: auto auto;
     padding: 24px;
+    margin: 0 142px 0 142px;
+  }
+
+  .card-body {
+    padding: 24px;
+  }
+
+  .works {
+    gap: 142px;
   }
 }
