Add anchor links to jump to sections

--- a/index.css
+++ b/index.css
@@ -455,7 +455,10 @@ form {
   }
 
   .card-body {
-    padding: 24px;
+    padding: 0 24px 0 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 
   .works {
