--- a/index.css
+++ b/index.css
@@ -235,14 +235,19 @@ p {
   background-position: top right;
 }
 
-.about {
+.about-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding: 114px 24px;
   background-image: url("images/base-about-myself.svg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .social-media-icons {
