--- a/index.css
+++ b/index.css
@@ -448,22 +448,21 @@ form {
   }
 
   .snapshot {
-    width: 100%;
-    height: 100%;
+    width: 544px;
+    height: 448px;
   }
 
   .card {
     display: grid;
     grid-template-columns: auto auto;
     padding: 24px;
-    margin: 0 142px 0 142px;
+    justify-content: center;
   }
 
   .card-body {
     padding: 0 24px 0 24px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
   }
 
   .works {
@@ -501,5 +500,10 @@ form {
 
   .swap {
     order: -1;
+  }
+
+  .frame-2,
+  .tags {
+    margin-bottom: 32px;
   }
 }
