--- a/index.css
+++ b/index.css
@@ -228,7 +228,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 114px 24px;
+  padding: 40% 24px;
   background-image: url(images/background-image.svg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -238,7 +238,7 @@ p {
 .about-container {
   display: flex;
   flex-direction: column;
-  padding: 114px 24px;
+  padding: 40% 24px;
   background-image: url("images/base-about-myself.svg");
   background-repeat: no-repeat;
   background-size: cover;
