--- a/index.css
+++ b/index.css
@@ -445,7 +445,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10% 25% 10% 25%;
+    padding: 10% 25%;
     background-image: url(images/contact-form-background-shapes.svg);
   }
 
