--- a/index.css
+++ b/index.css
@@ -314,6 +314,11 @@ nav {
 .snapshot {
   border-radius: 8px;
   width: 100%;
+  transition: transform 200ms;
+}
+
+.snapshot:hover {
+  transform: scale(1.03);
 }
 
 .skill-list {
