Translate instructions on hover

--- a/index.css
+++ b/index.css
@@ -384,6 +384,14 @@ form {
   gap: 20px;
 }
 
+.instructions {
+  transition: transform 200ms;
+}
+
+.instructions:hover {
+  transform: translateX(8px);
+}
+
 .text-field {
   border-radius: 8px;
   border: 1px solid #cfd8dc;
