--- a/index.css
+++ b/index.css
@@ -152,8 +152,8 @@ p {
   display: flex;
   align-items: center;
   margin-left: 24px;
-  transition: transform 500ms ease 2s;
-  transform: rotate(360deg);
+  /* transition: transform 500ms ease 2s;
+  transform: rotate(360deg); */
 }
 
 nav {
@@ -324,12 +324,12 @@ nav {
 .snapshot {
   border-radius: 8px;
   width: 100%;
-  transition: transform 200ms;
+  /* transition: transform 200ms; */
 }
 
-.snapshot:hover {
+/* .snapshot:hover {
   transform: scale(1.03);
-}
+} */
 
 .skill-list {
   display: flex;
@@ -383,14 +383,14 @@ form {
   padding-top: 50px;
   gap: 20px;
 }
-
+/* 
 .instructions {
   transition: transform 200ms;
 }
 
 .instructions:hover {
   transform: translateX(8px);
-}
+} */
 
 .text-field {
   border-radius: 8px;
