--- a/index.css
+++ b/index.css
@@ -324,12 +324,12 @@ nav {
 .snapshot {
   border-radius: 8px;
   width: 100%;
-  /* transition: transform 200ms; */
+  transition: transform 200ms;
 }
 
-/* .snapshot:hover {
+.snapshot:hover {
   transform: scale(1.03);
-} */
+}
 
 .skill-list {
   display: flex;
