--- a/index.css
+++ b/index.css
@@ -324,7 +324,7 @@ nav {
 .snapshot {
   border-radius: 8px;
   width: 100%;
-  transition: transform 500ms;
+  transition: transform 1s;
 }
 
 .snapshot:hover {
@@ -385,7 +385,7 @@ form {
 }
 
 .instructions {
-  transition: transform 200ms;
+  transition: transform 500ms;
 }
 
 .instructions:hover {
