--- a/index.css
+++ b/index.css
@@ -13,11 +13,14 @@ section {
   display: block;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 ul,
 li {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
 body {
@@ -208,16 +211,16 @@ nav {
   transition-duration: 500ms;
 }
 
-.link-button {
-  border: 0 none;
-  text-decoration: none;
-}
-
 .button:hover {
   background-color: #6070ff;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   color: #fff;
   cursor: pointer;
+}
+
+.link-button {
+  border: 0 none;
+  text-decoration: none;
 }
 
 .button:active {
