--- a/index.css
+++ b/index.css
@@ -476,16 +476,12 @@ form {
     }
   }
 
-  footer {
-    background-image: url(images/contact-form-background-shape-desktop.svg);
-    padding: 79px 74px 48px 74px;
-  }
-
   .contact-me {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10% 25%;
+    border-top-left-radius: 160px;
     background-image: url(images/contact-form-background-shapes.svg);
   }
 
