--- a/index.css
+++ b/index.css
@@ -246,22 +246,16 @@ nav {
   box-sizing: border-box;
 }
 
-.headline-container {
-  background-image: url(images/header-background-mobile.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom right;
-}
-
 .headline {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 40% 24px;
-  background-image: url(images/background-image.svg);
+  background-image: url(images/headline-background-image.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top right;
+  border-bottom-left-radius: 80px;
 }
 
 .about-container {
@@ -453,11 +447,6 @@ form {
     margin-right: 15%;
   }
 
-  .headline-container {
-    background-image: url(images/header-background-desktop.svg);
-    background-position: bottom left;
-  }
-
   .headline {
     padding: 20% 25%;
     background-image: url(images/header-shapes-desktop.svg);
@@ -465,6 +454,7 @@ form {
     background-size: contain;
     animation-name: animateHeadline;
     animation-duration: 2s;
+    border-bottom-left-radius: 160px;
   }
 
   @keyframes animateHeadline {
