--- a/index.css
+++ b/index.css
@@ -155,7 +155,7 @@ p {
   z-index: 1000;
   display: flex;
   align-items: center;
-  background-color: #fff;
+  top: 0;
 }
 
 .logo {
@@ -251,11 +251,12 @@ nav {
   flex-direction: column;
   align-items: flex-start;
   padding: 40% 24px;
+  margin-top: 48px;
+  border-bottom-left-radius: 80px;
   background-image: url(images/headline-background-image.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top right;
-  border-bottom-left-radius: 80px;
 }
 
 .about-container {
