--- a/index.css
+++ b/index.css
@@ -19,8 +19,10 @@ section {
 }
 
 ul,
+a,
 li {
   list-style-type: none;
+  text-decoration: none;
 }
 
 body {
@@ -147,12 +149,16 @@ p {
   background-color: #6070ff;
 }
 
+.fw-600 {
+  font-weight: 600;
+}
+
 /* Layout */
 .app-bar {
   height: 48px;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 2;
   display: flex;
   align-items: center;
   top: 0;
@@ -167,14 +173,13 @@ p {
   transform: rotate(360deg);
 }
 
-nav {
+.nav {
   display: flex;
   flex-grow: 2;
   justify-content: flex-end;
-  margin-right: 12px;
 }
 
-.menu-button {
+.icon-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -411,6 +416,10 @@ form {
   margin-bottom: 12px;
 }
 
+.mb-40 {
+  margin-bottom: 40px;
+}
+
 .p-16 {
   padding: 16px;
 }
@@ -424,6 +433,26 @@ form {
   flex-grow: 1;
 }
 
+.mobile-menu {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 3;
+  opacity: 0.95;
+}
+
+.mobile-menu .app-bar {
+  justify-content: flex-end;
+}
+
+.expand-nav {
+  margin-top: 48px;
+  padding: 0 28px;
+  display: flex;
+  flex-direction: column;
+}
+
 /* Large screen devices */
 @media screen and (min-width: 992px) {
   .header-1 {
@@ -432,7 +461,8 @@ form {
     font-weight: bold;
   }
 
-  .menu-button {
+  .menu-button,
+  .mobile-menu {
     display: none;
   }
 
@@ -441,11 +471,11 @@ form {
   }
 
   .logo {
-    margin-left: 15%;
+    margin-left: 10%;
   }
 
-  nav {
-    margin-right: 15%;
+  .nav {
+    margin-right: 10%;
   }
 
   .headline {
