--- a/index.css
+++ b/index.css
@@ -438,13 +438,21 @@ form {
 }
 
 .mobile-menu {
-  display: none;
-  position: absolute;
+  /* display: none; */
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
   z-index: 3;
-  opacity: 0.95;
+  mix-blend-mode: multiply;
+}
+
+.headline,
+.works,
+.about-container,
+.contact-me,
+header {
+  filter: blur(8px);
 }
 
 .mobile-menu .app-bar {
