--- a/index.css
+++ b/index.css
@@ -438,21 +438,13 @@ form {
 }
 
 .mobile-menu {
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
   z-index: 3;
   mix-blend-mode: multiply;
-}
-
-.headline,
-.works,
-.about-container,
-.contact-me,
-header {
-  filter: blur(8px);
 }
 
 .mobile-menu .app-bar {
