--- a/index.css
+++ b/index.css
@@ -442,7 +442,7 @@ form {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 3;
   mix-blend-mode: multiply;
 }
