--- a/index.css
+++ b/index.css
@@ -146,6 +146,10 @@ p {
   background-color: #fff;
 }
 
+.bg-n50 {
+  background-color: #c1c7d0;
+}
+
 .bg-b400 {
   background-color: #6070ff;
 }
@@ -448,6 +452,39 @@ form {
   padding: 0 28px;
   display: flex;
   flex-direction: column;
+}
+
+.modal-overlay {
+  filter: blur(4px);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  z-index: 4;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: multiply;
+}
+
+.show-modal {
+  display: block;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 50px 16px;
+  border-radius: 16px;
+  padding: 18px 16px;
+  mix-blend-mode: normal;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Spacing */
