--- a/index.css
+++ b/index.css
@@ -218,6 +218,22 @@ p {
   gap: 32px;
 }
 
+.normal-secondary-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+  padding: 12px 22px;
+  border: 1px solid #6070ff;
+  box-sizing: border-box;
+  border-radius: 8px;
+  font-size: 15px;
+  line-height: 20px;
+  color: #396df2;
+  text-align: center;
+  gap: 14px;
+}
+
 .button {
   display: flex;
   justify-content: space-between;
@@ -543,10 +559,6 @@ form {
 
 .divider {
   border: 1px solid #ebecf0
-}
-
-.fullwidth {
-  width: 100%;
 }
 
 /* Large screen devices */
